# era_interpreter

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md
CMakeModules/: FindCMocka.cmake
doc/: InternalStructure.md  README.md
include/: branch_operators.h  branching.h  era_errors.h  era_interpreter.h  era_status.h  era_struct.h  era_types.h  era_util.h  erric_interpreter.h  erric_status.h  erric_struct.h  erric_types.h  erric_util.h  file_reading.h  logic.h  logic_operators.h  math_operators.h  memory.h  memory_operators.h  operators.h  reverse_translation.h  util.h
src/: branch_operators.c  branching.c  era_interpreter.c  era_util.c  erric_interpreter.c  erric_util.c  file_reading.c  logic.c  logic_operators.c  main.c  math_operators.c  memory.c  memory_operators.c  operators.c  reverse_translation.c  util.c
test/: CMakeLists.txt  README.md  base_tests.c  branch_tests.c  file_reading_tests.c  logic_tests.c  math_tests.c  memory_tests.c  tests.c  util_tests.c
test_binaries/: README.md
tests/: README.md
